# cosmos

./: .gitignore  Any.hpp  AnyTest.cpp  Aspect_test.cpp  CMakeLists.txt  Ioc.hpp  Ioc_test.cpp  MessageBusTest.cpp  Variant.hpp  VariantTest.cpp  boost_filesystem.cpp  catch_signal.cpp  function_traits.hpp  function_traits_test.cpp  modern_messagebus.hpp  test_dynamic_cast.cpp  test_modern_messagebus.cpp
boost_ref/: CMakeLists.txt  ref1.cpp  ref2.cpp  ref3.cpp
callback/: CMakeLists.txt  callback1.cpp  callback2.cpp
constructors/: CMakeLists.txt  copy_vs_assign.cpp
core_dump/: README.md  coreDumpTest  coreDumpTest.cpp  coreDumpTest2  coreDumpTest2.cpp
cpp11book/: CMakeLists.txt
cpp11book/chapter_1/: CMakeLists.txt
cpp11book/chapter_1/1-1/: CMakeLists.txt
cpp11book/chapter_1/1-1/1-1/: Test.cpp
cpp11book/chapter_1/1-11~1-15/: CMakeLists.txt
cpp11book/chapter_1/1-11~1-15/1-11~1-15/: Range.hpp  Test.cpp
cpp11book/chapter_1/1-2/: CMakeLists.txt
cpp11book/chapter_1/1-2/1-2/: Test.cpp
cpp11book/chapter_16/: CMakeLists.txt  Connector.h  Message.h  RWHandler.h  Server.h  test_client.cpp  test_server.cpp
cpp11book/chapter_2/: CMakeLists.txt
cpp11book/chapter_2/2-1/: CMakeLists.txt
cpp11book/chapter_2/2-1/2-1/: Test.cpp
cpp11book/chapter_2/2-4/: CMakeLists.txt
cpp11book/chapter_2/2-4/2-4/: Test.cpp
cpp11book/chapter_3/: CMakeLists.txt
cpp11book/chapter_3/3-1/: CMakeLists.txt
cpp11book/chapter_3/3-15/: CMakeLists.txt
cpp11book/chapter_3/3-15/3-15/: Variant.hpp
cpp11book/chapter_3/3-2/: CMakeLists.txt
cpp11book/chapter_3/3-2/3-2/: Test.cpp
cpp11book/chapter_3/3-3/: CMakeLists.txt
cpp11book/chapter_3/3-3/3-3/: Test.cpp
cpp11book/chapter_3/3-4/: CMakeLists.txt
cpp11book/chapter_3/3-4/3-4/: Test.cpp
cpp11book/chapter_4/: CMakeLists.txt
cpp11book/chapter_4/4-1/: CMakeLists.txt
cpp11book/chapter_4/4-1/4-1/: Test.cpp
cpp11book/chapter_5/: CMakeLists.txt
cpp11book/chapter_5/5-1/: CMakeLists.txt
cpp11book/chapter_5/5-1/5-1/: Test.cpp  Test1.cpp  build.sh
cpp11book/chapter_5/5-2/: CMakeLists.txt
cpp11book/chapter_5/5-2/5-2/: Test.cpp
cpp11book/chapter_5/5-3/: CMakeLists.txt
cpp11book/chapter_5/5-3/5-3/: Test.cpp
cpp11book/chapter_5/5-5/: CMakeLists.txt
cpp11book/chapter_5/5-5/5-5/: SyncQueue.hpp  Test.cpp
cpp11book/chapter_5/5-6/: CMakeLists.txt
cpp11book/chapter_5/5-6/5-6/: Test.cpp
cpp11book/chapter_6/: CMakeLists.txt
cpp11book/chapter_6/6-1/: CMakeLists.txt
cpp11book/chapter_6/6-1/6-1/: Test.cpp
dag/: CMakeLists.txt
dag/apps/: CMakeLists.txt  test_subnode.cpp
dag/cmake/: Dependencies.cmake  ProtoBuf.cmake  Utils.cmake
dag/common/: CMakeLists.txt  perception_gflags.cpp  perception_gflags.h
dag/common/configs/: config_gflags.cpp
dag/common/status/test/: status_test.cpp
dag/common/util/: file.cpp  file.h  string_util.cpp
dag/common/util/test/: file_test.cpp  string_util_test.cpp
dag/lib/: CMakeLists.txt
dag/lib/base/: concurrent_queue.h  mutex.h  registerer.cc  thread.cpp  time_util.h
dag/lib/base/test/: registerer_test.cc
dag/onboard/: CMakeLists.txt  common_shared_data.cpp  common_shared_data.h  dag_streaming.cpp  dag_streaming.h  event_manager.cpp  event_manager.h  shared_data.h  shared_data_manager.cpp  shared_data_manager.h  subnode.cpp  subnode.h  subnode_helper.cpp  subnode_helper.h  transform_input.cpp.bak  types.h
dag/onboard/test/: subnode_test.cpp
dag/oss/glog/lib/: libglog.la
dag/oss/glog/lib/pkgconfig/: libglog.pc
dag/proto/: dag_config.pb.cc  dag_config.pb.h  error_code.pb.cc  error_code.pb.h
factory/: CMakeLists.txt  abstract_object.h  abstract_object_factory.h  main.cpp  perception_macros.h  registerer.cpp  registerer.h  xxx_concrete.cpp  xxx_concrete.h  xxx_factory.cpp  xxx_factory.h  xxx_interface.cpp  xxx_interface.h
hello_qt/: hellowidget.cpp  main.cpp
metaprogramming/: CMakeLists.txt  unit_analysis.cpp
opencv/: CMakeLists.txt  calibrate_hand_eye.cpp  opencv_yaml.cpp  opencv_yaml1.cpp
plugin/basic_example/: example  main.cpp  test.cpp
plugin/prototype/: CMakeLists.txt
plugin/prototype/apps/: CMakeLists.txt
plugin/prototype/apps/sample_create_camera/: CMakeLists.txt  create_opencv_camera.cpp
plugin/prototype/framework/: CMakeLists.txt
plugin/prototype/framework/src/: abstract_camera.cpp  abstract_camera.h  abstract_factory_macro.h  abstract_object.cpp  abstract_object.h  abstract_object_factory.cpp  abstract_object_factory.h  abstract_widget.cpp  abstract_widget.h  botsys.cpp  botsys.h  botsys_logger.cpp  botsys_logger.h  data_types.cpp  data_types.h  file_finder.cpp  file_finder.h  global_object_factory.cpp  global_object_factory.h
plugin/prototype/plugin_library/: CMakeLists.txt
plugin/prototype/plugin_library/OpenCVCamera/: CMakeLists.txt
plugin/prototype/plugin_library/OpenCVCamera/src/: OpenCVCamera.cpp  OpenCVCamera.h  OpenCVCameraFactory.cpp
plugin/prototype/plugin_library/SimpleUI/: CMakeLists.txt
plugin/prototype/plugin_library/SimpleUI/src/: SimpleWidgetViewer.cpp  SimpleWidgetViewer.h  SimpleWidgetViewer.ui  WidgetCloser.cpp  WidgetCloser.h
plugin/qlibrary-example/src/: main.cpp
pthread/: CMakeLists.txt  pthread_1.cpp  pthread_2.cpp  pthread_3.cpp  readme
qt/hello_qt/: CMakeLists.txt  helloqt.cpp  hellowidget.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  test_tcp_client.cpp  test_tcp_server.cpp
undefined_reference/: README.md
undefined_reference/test1/: README.md
undefined_reference/test2/: README.md  main  test.h
undefined_reference/test3/: README.md  func.c  func.h  test.c
undefined_reference/test4/: README.md  main  main.c  test.c  test.h
undefined_reference/test5/: README.md  main  main.cpp  test.h
