cmake_minimum_required (VERSION 3.1)
PROJECT(1-2)
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

FILE (GLOB HDRS "${CMAKE_CURRENT_SOURCE_DIR}/1-2/*.h")
FILE (GLOB SRCS "${CMAKE_CURRENT_SOURCE_DIR}/1-2/*.cpp")

include_directories (${CMAKE_CURRENT_SOURCE_DIR}/1-2)
ADD_EXECUTABLE(1-2 ${SRCS})
